--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
     "expect": "^1.20.2",
     "jsdom": "^9.3.0",
     "mocha": "^2.5.3",
-    "mocha-jsdom": "^1.1.0",
+    "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^0.9.0"
+  },
+  "dependencies": {
+    "expect": "^1.20.2",
+    "handlebars": "^4.0.5",
+    "jsdom": "^9.4.1",
+    "mocha": "^2.5.3",
+    "mocha-jsdom": "~1.1.0"
   }
 }
